Update Dockerfile.simple to use port 6000
- Changed PORT environment variable from 8000 to 6000
- Updated health check to use port 6000
- Maintains consistency with main Dockerfile changes

--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -1,10 +1,10 @@
 # Alternative Dockerfile using different approach
 FROM python:3.11-slim
 
-# Set environment variables
+# Set environment variables (updated to port 6000)
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
-    PORT=8000
+    PORT=6000
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
@@ -41,11 +41,11 @@ RUN chown -R appuser:appuser /app
 # Switch to non-root user
 USER appuser
 
-# Health check
+# Health check (updated to port 6000)
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:${PORT}/health || exit 1
 
-# Expose port
+# Expose port 6000
 EXPOSE ${PORT}
 
 # Run the application
